[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drupal-gpt53-codex-maintenance-poc"
version = "0.1.0"
description = "POC CLI for GPT-5.3-Codex Drupal module maintenance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Victor Stack AI"}
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
drupal-gpt53-codex = "drupal_gpt53_codex_poc.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["drupal_gpt53_codex_poc"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
